--- a/services/k3s/ansible/setup_waggle_k3s.yaml
+++ b/services/k3s/ansible/setup_waggle_k3s.yaml
@@ -38,11 +38,11 @@
         path: /home/{{ user }}/sage/k3s/registries.yaml
         regexp: '\$\{ECR_REGISTRY\}'
         replace: "{{ ecr_registry }}"
-    - name: create k3s image storage directory
-      file:
-        path: {{ image_storage }}
-        state: directory
-        mode: "u=rwx,g=rx,o=rx"
+    # - name: create k3s image storage directory
+    #   file:
+    #     path: {{ image_storage }}
+    #     state: directory
+    #     mode: "u=rwx,g=rx,o=rx"
     - name: create a new waggle-k3s cluster
       shell: |
         k3d create cluster waggle-k3s \
