--- a/services/k3s/ansible/setup_waggle_k3s.yaml
+++ b/services/k3s/ansible/setup_waggle_k3s.yaml
@@ -1,7 +1,7 @@
 ---
 - hosts: nx
   vars:
-    user: nx
+    user: root
     image_storage: /media/plugin-data-k3s
     data_storage: /media/k3s-data
     ecr_registry: registry_address:5000
@@ -22,23 +22,23 @@
     - name: delete existing waggle-k3s cluster
       shell: k3d delete cluster waggle-k3s
       when: cluster.stdout
-    - name: create k3s configuration directory
-      file:
-        path: /home/{{ user }}/sage/k3s
-        state: directory
-        mode: "u=rwx,g=rx,o=rx"
-    - name: copy ecr registry
-      copy:
-        src: etc/rancher/k3s/registries.yaml
-        dest: /home/{{ user }}/sage/k3s/registries.yaml
-        owner: "{{ user }}"
-        group: "{{ user }}"
-        mode: "u=rwx,g=rx,o=rx"
-    - name: set ecr registry address
-      replace:
-        path: /home/{{ user }}/sage/k3s/registries.yaml
-        regexp: '\$\{ECR_REGISTRY\}'
-        replace: "{{ ecr_registry }}"
+    #- name: create k3s configuration directory
+    #  file:
+    #    path: /home/{{ user }}/sage/k3s
+    #    state: directory
+    #    mode: "u=rwx,g=rx,o=rx"
+    #- name: copy ecr registry
+    #  copy:
+    #    src: etc/rancher/k3s/registries.yaml
+    #    dest: /home/{{ user }}/sage/k3s/registries.yaml
+    #    owner: "{{ user }}"
+    #    group: "{{ user }}"
+    #    mode: "u=rwx,g=rx,o=rx"
+    #- name: set ecr registry address
+    #  replace:
+    #    path: /home/{{ user }}/sage/k3s/registries.yaml
+    #    regexp: '\$\{ECR_REGISTRY\}'
+    #    replace: "{{ ecr_registry }}"
     # - name: create k3s image storage directory
     #   file:
     #     path: "{{ image_storage }}"
@@ -51,12 +51,12 @@
         mode: "u=rwx,g=rx,o=rx"
     - name: create a new waggle-k3s cluster
       shell: |
-        k3d create cluster waggle-k3s \
-        -v /home/{{ user }}/sage/k3s/registries.yaml:/etc/rancher/k3s/registries.yaml \
+        k3d cluster create waggle-k3s \
+    #    -v /home/{{ user }}/sage/k3s/registries.yaml:/etc/rancher/k3s/registries.yaml \
         -v {{ data_storage }}:/waggle \
         --api-port 6443 \
         --no-lb \
-        --workers 1
+        --agents 1
     - name: wait for the cluster be spawned
       shell: |
         docker exec k3d-waggle-k3s-master-0 \
